	  on non-local files aswell.
	* src/soundconverter.py: Added "artist - album" in folder patterns.
	  (thanks Claudio)
	  Fixed char escaping problem in same-folder-as-input mode.
	  Fixed crashing when tags contained a list (ie. multiples authors).
	  (thanks Ken)
	  Better replace-messy-chars, with unicode->ascii to remove diacritics.

2007-07-19  Gautier Portet <kassoulet gmail com>

	* po/it.po: Added Italian translation.
	  (thanks Stefano)

2007-07-09  Gautier Portet <kassoulet gmail com>
	* po/es.po: Added spanish translation.
	  (thanks Gary)

2007-07-04  Gautier Portet <kassoulet gmail com>
	* data/soundconverter.desktop, src/soundconverter.py: Changed the desktop
	  file so we accept list of URIs instead of just one local file, so opening
	  multiples files from nautilus will work.

2007-06-25  Gautier Portet <kassoulet gmail com>
	* po/ru.po: added russian translation.
	 (thanks Alexandre)

2007-06-23  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: fixed track-count in custom filenames patterns.
	  (thanks Jonas)

2007-06-20  Gautier Portet <kassoulet gmail com>

	* data/soundconverter.desktop: Added common audio mimetypes.

2007-04-27  Gautier Portet <kassoulet gmail com>

	* data/Makefile.am: Removed evil DESTDIR, thanks William!
	* Release 0.9.6

2007-04-25  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fixed error message when python-gstreamer is 
	  absent.
	* Release 0.9.5

2007-04-24  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Better checking of gstreamer elements.
	  Now we stop when required elements are missing, and we disable
	  encoders not present.
	  

2007-04-23  Gautier Portet <kassoulet gmail com>

	* data/: GNOME/FreeDesktop compliant icon handling. 
	  Refresh icon cache at (un)install.

2007-04-16  Gautier Portet <kassoulet gmail com>

	* po/ data/soundconverter.desktop: Desktop file translation enabled.

2007-04-15  Gautier Portet <kassoulet gmail com>
